--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5">
-  <h2>Angular 6</h2><hr>
+  <h2>Angular 6: Pruebas Miscelaneas</h2><hr>
   <prueba-ng-style></prueba-ng-style>
+  <prueba-ng-class></prueba-ng-class>
 </div>
 
