Componente sobre el que se van a probar alguna directiva personalizada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <h2>Angular 6: Pruebas Miscelaneas</h2><hr>
   <prueba-ng-style></prueba-ng-style>
   <prueba-ng-class></prueba-ng-class>
+  <prueba-directivas-personalizadas></prueba-directivas-personalizadas>
 </div>
 
