Directiva personalizada de resaltado, con recogida de parametros

--- a/src/app/components/prueba-directivas-personalizadas/prueba-directivas-personalizadas.component.html
+++ b/src/app/components/prueba-directivas-personalizadas/prueba-directivas-personalizadas.component.html
@@ -2,7 +2,8 @@
     <div class="card-body">
       <h5 class="card-title">Directivas personalizadas</h5>
       <div class="card-text">
-        ...
+        <div resaltado colores="white/grey">Esto es algo resaltado indicando colores</div>
+        <div resaltado>Sin establecer colores</div>
       </div>
     </div>
   </div>
