--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <prueba-ng-style></prueba-ng-style>
   <prueba-ng-class></prueba-ng-class>
   <prueba-directivas-personalizadas></prueba-directivas-personalizadas>
+  <prueba-ng-switch></prueba-ng-switch>
 </div>
 
