Unificacion de componentes en un nuevo compo Home. Y Router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<div class="container mt-5">
-  <h2>Angular 6: Pruebas Miscelaneas</h2><hr>
-  <prueba-ng-style></prueba-ng-style>
-  <prueba-ng-class></prueba-ng-class>
-  <prueba-directivas-personalizadas></prueba-directivas-personalizadas>
-  <prueba-ng-switch></prueba-ng-switch>
+<div class="container my-2">
+    <h2>Angular 6: Pruebas Miscelaneas</h2>
+    <hr>
+    <router-outlet></router-outlet>
 </div>
-
