--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,10 +6,10 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a routerLink="home" routerLinkActive="active" >Pruebas de Directivas</a>
       </li> 
-      <li class="nav-item active">
+      <li class="nav-item">
         <a routerLink="usuario" routerLinkActive="active">Pruebas de Router</a>
       </li>
     </ul>
