Un h4 indicando el apartado

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
+<h4>Directivas</h4>
 <prueba-ng-style></prueba-ng-style>
 <prueba-ng-class></prueba-ng-class>
+<prueba-ng-switch></prueba-ng-switch> 
 <prueba-directivas-personalizadas></prueba-directivas-personalizadas>
-<prueba-ng-switch></prueba-ng-switch>
