--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,3 +1,12 @@
-<p>
-  usuario works!
-</p>
+<h4>Subruteado</h4>
+<div class="row">
+  <div class="col text-center">    
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-secondary" routerLink="nuevo" routerLinkActive="active">Nuevo</button>
+      <button type="button" class="btn btn-secondary" routerLink="editar" routerLinkActive="active">Editar</button>
+      <button type="button" class="btn btn-secondary" routerLink="detalle" routerLinkActive="active">Detalle</button>
+    </div>
+  </div>
+</div>
+
+<router-outlet></router-outlet>
