Componente de subruta recogiendo parametros de ruta del padre

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a routerLink="home" routerLinkActive="active" >Pruebas de Directivas</a>
       </li> 
       <li class="nav-item">
-        <a routerLink="usuario" routerLinkActive="active">Pruebas de Router</a>
+        <a [routerLink]="['usuario',1]" routerLinkActive="active">Pruebas de Router</a>
       </li>
     </ul>
   </div>
