--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a [routerLink]="['usuario',1]" routerLinkActive="active">Pruebas de Router</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="ciclovida" routerLinkActive="active">Pruebas de Ciclo de Vida</a>
+      </li>
     </ul>
   </div>
 </nav>
