ngIf then - else

--- a/src/app/components/pruebas-directivas/container-pruebas-directivas.component.html
+++ b/src/app/components/pruebas-directivas/container-pruebas-directivas.component.html
@@ -1,5 +1,6 @@
 <h4>Directivas</h4>
 <prueba-ng-style></prueba-ng-style>
 <prueba-ng-class></prueba-ng-class>
+<prueba-ng-if-then-else></prueba-ng-if-then-else>
 <prueba-ng-switch></prueba-ng-switch> 
 <prueba-directivas-personalizadas></prueba-directivas-personalizadas>
