Nuevo apartado para hacer pruebas sobre formularios

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a routerLink="ciclovida" routerLinkActive="active">Pruebas de Ciclo de Vida</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="formularios" routerLinkActive="active">Pruebas de Formularios</a>
+      </li>
     </ul>
   </div>
 </nav>
