--- a/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
+++ b/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
@@ -1,6 +1,6 @@
 <form novalidate #formulario="ngForm" (ngSubmit)="guardar(formulario)">
   <div class="form-group row">
-    <label for="inputNombre" class="col-sm-2 col-form-label">Nombre</label>
+    <label for="inputNombre" class="col-sm-2 col-form-label">Nombre*</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" [(ngModel)]="usuario.nombre" name="nombre"
          #nombre="ngModel" [ngClass]="{'is-invalid': nombre.errors}" placeholder="Nombre" required>
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+    <label for="inputEmail" class="col-sm-2 col-form-label">Email*</label>
     <div class="col-sm-10">
       <input type="email" class="form-control" [(ngModel)]="usuario.email" name="email" 
           #email="ngModel" [ngClass]="{'is-invalid': email.errors}"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" placeholder="Email" required>
@@ -30,6 +30,20 @@
           <div *ngIf="email.errors?.pattern" class="text-danger mt-2" role="alert">
             El email no tiene un formato válido
           </div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputpais" class="col-sm-2 col-form-label">País*</label>
+    <div class="col-sm-10">
+      <select class="form-control"
+              [(ngModel)]="usuario.pais" name="pais" #pais="ngModel" required>
+        <option value="" selected>Selecccione un país</option>
+        <option *ngFor="let pais of paises" [ngValue]="pais">{{pais.nombre}}</option>
+      </select>
+      Seleccionado: {{usuario.pais|json}} (Si en lugar de [ngValue], ponemos [value] sería solo string)
+      <div *ngIf="pais.errors && pais.dirty" class="text-danger mt-2" role="alert">
+          El país es un campo obligatorio
+      </div>
     </div>
   </div>
   <div class="form-group row">
