--- a/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
+++ b/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
@@ -65,6 +65,16 @@
     </div>
   </div> 
   <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Condiciones</label>
+    <div class="col-sm-10 align-middle" style="line-height: 38px;">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" [(ngModel)]="usuario.aceptaCondiciones" type="checkbox"  name="aceptaCondiciones">
+          <label class="form-check-label" for="aceptaCondiciones">Acepto las condiciones</label>
+        </div>
+        <div>Seleccionado: {{usuario.aceptaCondiciones}}</div> 
+    </div>
+  </div> 
+  <div class="form-group row">
     <div class="offset-sm-2 col-sm-10">
       <button type="submit" [disabled]="!formulario.valid" class="btn btn-primary">Guardar</button>
     </div>
