--- a/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
+++ b/src/app/components/pruebas-formularios/validacion-basica-por-template/validacion-basica-por-template.component.html
@@ -1,3 +1,4 @@
+<h5 class="mb-3">Formulario manejado mayormente por html</h5>
 <form novalidate #formulario="ngForm" (ngSubmit)="guardar(formulario)">
   <div class="form-group row">
     <label for="inputNombre" class="col-sm-2 col-form-label">Nombre*</label>
