--- a/src/app/components/pruebas-formularios/validacion-basica-por-codigo/validacion-basica-por-codigo.component.html
+++ b/src/app/components/pruebas-formularios/validacion-basica-por-codigo/validacion-basica-por-codigo.component.html
@@ -1,3 +1,46 @@
-
+<h5 class="mb-3">Formulario manejado mayormente por código</h5>
+<!-- 
+  Se trata de no añadir ngModel a los inputs, ni #XXXXXX, 
+  a cambio, se ponen formControlName y el [formGroup] (para poder referenciarlos desde codigo), 
+  y en las comprobaciones se realizan através del nombre puesto en [formGroup]
+  Se puede hacer: formulario.get('email').errors o formulario.controls.email.errors.
+-->
+<form [formGroup]="formulario" (ngSubmit)="guardar()" novalidate>
+    <div class="form-group row">
+      <label for="inputNombre" class="col-sm-2 col-form-label">Nombre*</label>
+      <div class="col-sm-10">
+        <input formControlName="nombre" type="text" class="form-control" name="nombre"placeholder="Nombre" required>
+        <div *ngIf="formulario.get('nombre').errors?.required" class="text-danger mt-2" role="alert">
+            El nombre es obligatorio
+          </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputApellidos" class="col-sm-2 col-form-label">Apellidos</label>
+      <div class="col-sm-10">
+        <input formControlName="apellidos" type="text" class="form-control" name="apellidos" placeholder="Apellidos" minlength="2">        
+        <div *ngIf="formulario.get('apellidos').errors?.minlength" class="text-danger mt-2 is-invalid" role="alert">
+            El apellido debe tener al menos {{formulario.get('apellidos').errors.minlength.requiredLength}} caracteres
+          </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputEmail" class="col-sm-2 col-form-label">Email*</label>
+      <div class="col-sm-10">
+        <input formControlName="email" type="email" class="form-control" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" placeholder="Email" required>
+        <div *ngIf="formulario.get('email').errors?.required" class="text-danger mt-2 is-invalid" role="alert">
+            El email es obligatorio
+          </div>
+          <div *ngIf="formulario.get('email').errors?.pattern" class="text-danger mt-2" role="alert">
+            El email no tiene un formato válido
+          </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="offset-sm-2 col-sm-10">
+        <button type="submit" [disabled]="!formulario.valid" class="btn btn-primary">Guardar</button>
+      </div>
+    </div>
+  </form>
   
   
