Pasando datos entre componentes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a routerLink="formularios" routerLinkActive="active">Pruebas de Formularios</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="pasandodatos" routerLinkActive="active">Pruebas de Pasando Datos</a>
+      </li>
     </ul>
   </div>
 </nav>
