--- a/src/app/components/pruebas-pasando-datos/container-pruebas-pasando-datos.component.html
+++ b/src/app/components/pruebas-pasando-datos/container-pruebas-pasando-datos.component.html
@@ -1,14 +1,8 @@
 <div class="row">
   <div class="col">
-      <h3>Servicios</h3><hr>
-      <h5>Estamos cambiando un valor en el servicio y lo que pasa es:</h5><hr>
-      <div>Valor apuntando a propiedad del servicio: <b>{{miSvc.valor}}</b></div>
-      <div>Valor vinculando a propiedad de Componente (no se entera del cambio): <b>{{valor}}</b></div><hr>
-      <div>Valor apuntando a Observable de la propiedad del servicio: <b>{{miSvc.valorObservable | async}}</b></div>
-      <div>Valor Observable vinculando a propiedad de Componente (no se entera del cambio): <b>{{valorObservable |async}}</b></div><hr>
+        <interconectando-datos-servicios></interconectando-datos-servicios>
   </div>
   <div class="col">
-      <h3>@Input / @Output</h3><hr>
-      <app-componente-padre></app-componente-padre>
+      <componentente-padre></componentente-padre>
   </div>
 </div>
