--- a/src/app/components/pruebas-pasando-datos/container-pruebas-pasando-datos.component.html
+++ b/src/app/components/pruebas-pasando-datos/container-pruebas-pasando-datos.component.html
@@ -5,4 +5,7 @@
   <div class="col">
       <componentente-padre></componentente-padre>
   </div>
+  <div class="col">
+        <app-padre></app-padre>
+    </div>
 </div>
