--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container my-2">
+<div class="container-fluid my-2">
     <h2>Angular 6: Pruebas Miscelaneas</h2>
     <hr>
     <router-outlet></router-outlet>
